
<resources>
<string name="app_name">E.T.A</string>
<string name="action_settings">Logout</string>

<string name="login_display">Login Page</string>
<string name="login">Login</string>

<string name="username">Username</string>
<string name="usernameEnter">Enter your user name here</string>

<string name="password">Password</string>
<string name="cnfpassword">Confirm Password</string>
<string name="passwordEnter">Enter your password here</string>


<string name="clear">Clear</string>
<string name="register">Register</string>

<string name="fullname">Full Name</string>
<string name="fullnameEnter">Enter your full name here</string>

<string name="role">Role</string>

<string name="callphone">Dial Caretaker</string>
<string name="callfamily">Dial Family</string>
<string name="trackelderly">Track Elderly</string>

<string name="manageelderly">Manage Elderly</string>
<string name="geofence">Setup Geo-Fence</string>
<string name="reminder">Medicine Reminder</string>
<string name="role_select">Choose a role</string>

<string-array name="role">
    <item>Caretaker</item>
    <item>Elderly</item>
    <item>Immediate Family</item>
</string-array>

<string name="title_activity_elderly">Elderly</string>
<string name="title_activity_immediate_family">ImmediateFamily</string>
<string name="title_activity_caretaker">Caretaker</string>
</resources>
