<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fullname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullNameEnter"
        android:layout_below="@+id/fullname" />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEnter"
        android:layout_below="@+id/username" />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEnter"
        android:layout_below="@+id/password"
        android:password="true" />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cnfpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/cnfpassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cnfpasswordEnter"
        android:layout_below="@+id/passwordEnter"
        android:password="true" />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_select"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:id="@+id/role"
        android:entries="@array/role"
        android:paddingBottom="15dp"
        android:layout_weight="0.49" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/Register"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/Clear"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

</LinearLayout>