<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pc.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:src="@drawable/logo_eta"
        android:id="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/username"
        android:layout_below="@+id/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEnter"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true" />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/password"
        android:layout_below="@+id/usernameEnter"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEnter"
        android:password="true"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/Login"
        android:layout_below="@+id/passwordEnter"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/Clear"
        android:layout_below="@+id/Login"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
